<!-- Copyright (c) Microsoft. All rights reserved. -->

<resources>
    <!-- Please refer to https://azure.microsoft.com/en-us/services/cognitive-services/face/ to get your subscription key -->
    <!-- If you have subscription key with its corresponding endpoint, you can add them here to use the service -->
    <string name="subscription_key">874a44f831204e98b0ac42f2bad8fcdb</string>
    <string name="endpoint">https://westcentralus.api.cognitive.microsoft.com/face/v1.0</string>
    <string name="facebook_app_id">2520580008263860</string>

    <!-- Main activity -->
    <string name="detection">Detection</string>
    <string name="face_verification">Face to Face Verification</string>
    <string name="person_verification">Face to Person Verification</string>
    <string name="verification">Verification</string>
    <string name="identification">Identification</string>
    <string name="grouping">Grouping</string>
    <string name="find_similar_faces">Find Similar Faces</string>
    <string name="detection_description">Detect faces, face landmarks, pose, smile, glasses, gender, and age.</string>
    <string name="verification_description">Authentication between two faces or between a face and a person.</string>
    <string name="grouping_description">Group faces based on similarity.</string>
    <string name="find_similar_face_description">Search for similar-looking faces.</string>
    <string name="identification_description">Identify the person from a face.</string>
    <string name="baby_predict">Baby Predict</string>
    <string name="show_baby">Show Baby</string>
    <string name="baby_predict_description">How to your child in the future</string>
    <string name="info_group">Member of group: TuanDVSE05339, LuyenDDSE04999, BaoNTSE05601, DatTQSE05715</string>

    <!-- Tips to get subscription key shown on main activity-->
    <string name="app_name">Facy</string>
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your subscription key with its corresponding endpoint to source file \"app/res/values/strings.xml\" to enable Face API calls.</string>

    <!-- Detection activity -->
    <string name="image">Image:</string>
    <string name="select_image">Select\nImage</string>
    <string name="result">Result:</string>
    <string name="detect">Detect</string>
    <string name="found_baby">Success!Found </string>
    <string name="not_found_baby">Not detect your face!Pls Insert truth image</string>
    <string name="same_gender">The same gender so can NOT have children </string>


    <!-- Baby Predict activity -->
    <string name="share">Share On Facebook</string>
    <string name="load_img1">Load Image 1</string>
    <string name="load_img2">Load Image 2</string>
    <string name="check_image1">Input Image1 just only 1 face</string>


    <!-- Verification activity -->
    <string name="verify">Verify</string>
    <string name="face_0">Face0:</string>
    <string name="face_1">Face1:</string>
    <string name="manage_persons">Manage\nPersons</string>
    <string name="verification_menu">Verification\nMenu</string>

    <!-- Verification activity -->
    <string name="face">Face:</string>
    <string name="group">Group</string>

    <!-- Identification activity -->
    <string name="identify">Identify</string>
    <string name="manage_person_groups">Manage\nPerson\nGroups</string>
    <string name="person_groups">Person Groups</string>
    <string name="target_image">Target image</string>
    <string name="faces">Faces in image</string>

    <!-- Person group management activities -->
    <string name="delete">Delete</string>
    <string name="done_and_save">Save</string>

    <string name="person_group_list">Person Group List</string>
    <string name="person_group_list_tip">- Tap on a group to edit.\n- Long tap to delete.</string>
    <string name="add_person_group">Add Person Group</string>

    <string name="person_group">Person Group</string>
    <string name="person_group_tip">- Tap on a person to edit.\n- Long press to delete.</string>
    <string name="person_group_name">Person group name:</string>
    <string name="type_in_person_group_name_tip">Name (within 30 characters)</string>
    <string name="add_person">Add Person</string>

    <string name="person">Person</string>
    <string name="persons">Persons</string>
    <string name="person_tip">- Long press on a face to delete.</string>
    <string name="type_in_person_name_tip">Name (within 30 characters)</string>
    <string name="add_face">Add Face</string>
    <string name="person_name">Person name:</string>
    <string name="add_face_to_person">Add Faces To Person</string>
    <string name="select_face_tip">Select this person\'s faces (if exist) by click on the checkbox.</string>

    <!-- Find similar faces and grouping activity -->
    <string name="zero_face">Face list: 0 faces in total</string>
    <string name="target_face">Target face:</string>
    <string name="all_faces">All Faces:</string>
    <string name="add_faces">Add\nFaces</string>
    <string name="similar_person_description">Finding matchPerson people...</string>
    <string name="similar_face_description">Finding matchFace faces...</string>

    <!-- Common in all activities -->
    <string name="progress_dialog_title">Please wait</string>
    <string name="view_log">View Log</string>

    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>

    <!-- Logs -->
    <string name="log">Log:</string>
    <string name="detection_log">Detection Log</string>
    <string name="verification_log">Verification Log</string>
    <string name="find_similar_face_log">Find Similar Face Log</string>
    <string name="grouping_log">Grouping Log</string>
    <string name="identification_log">Identification Log</string>

    <!-- Warning messages -->
    <string name="person_name_empty_warning_message">Person name cannot be empty</string>
    <string name="no_face_to_group">No faces to group</string>
    <string name="no_person_group_selected_for_identification_warning">No person group selected</string>
    <string name="face_cannot_be_identified">Unknown person</string>
    <string name="user_provided_person_name">Person name</string>
    <string name="user_provided_description_data">User data</string>
    <string name="user_provided_person_group_name">Person group name</string>
    <string name="user_provided_person_group_description_data">User data</string>

</resources>
