<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.microsoft.projectoxford.face.samples.ui.BabyPredictActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/input_image"
        android:layout_marginBottom="@dimen/view_margin"
        android:baselineAligned="false"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/view_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_0"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="#E0E0E0" />

            <ImageView
                android:id="@+id/image_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="#E0E0E0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLoadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/loadImg1"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_weight="1"
                android:onClick="loadImage1"
                android:text="@string/load_img1" />

            <Button
                android:id="@+id/loadImg2"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="loadImage2"
                android:text="@string/load_img2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/radioButtonGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup_Gender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioGroup_character"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Gender: " />

                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonGenderClicked"
                    android:text="Boy" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRadioButtonGenderClicked"
                    android:text="Girl" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/radioButtonSkin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup_Skin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/skin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioGroup_character"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="Skin: " />

                <RadioButton
                    android:id="@+id/radioButton_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonSkinClicked"
                    android:text="Light" />

                <RadioButton
                    android:id="@+id/radioButton_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRadioButtonSkinClicked"
                    android:text="Dark" />/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_bar"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textColor="#F44336" />

        <ListView
            android:id="@+id/list_detected_faces"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:verticalSpacing="@dimen/view_margin" />

        <LinearLayout
            android:id="@+id/list_image_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
<!--            <ListView-->
<!--                android:id="@+id/list_detected_faces"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="250dp"-->
<!--                android:layout_weight="1"-->
<!--                android:background="#E0E0E0"-->
<!--                android:verticalSpacing="@dimen/view_margin" />-->
<!--            <ListView-->
<!--                android:id="@+id/list_image_baby"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="250dp"-->
<!--                android:layout_marginLeft="@dimen/view_margin"-->
<!--                android:layout_weight="1"-->
<!--                android:background="#E0E0E0"-->
<!--                android:verticalSpacing="@dimen/view_margin" />-->

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showBaby"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_weight="1"
            android:onClick="showBaby"
            android:text="@string/show_baby" />

        <Button
            android:id="@+id/share"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_weight="1"
            android:onClick="share"
            android:text="@string/share" />


    </LinearLayout>
</RelativeLayout>
